# LibMan

./: .gitignore  00_START_HERE.md  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  Doxyfile  QUICK_REFERENCE.md  README.md  README_SETUP_INDEX.md  SETUP_COMPLETE.md  SETUP_VERIFICATION.md  VSCODE_ADVANCED.md  VSCODE_SETUP.md  capnp_deps.pri  capnp_deps_finalize.pri  core_converter_deploy.pri  core_deps.pri  core_deps_finalize.pri  icons.qrc  libman.pro
tests/: CMakeLists.txt  main.cpp  mainwindow_test_hooks.h  run_tests.bat  test_paths.h  tests.pro  tst_core_path_utils.cpp  tst_core_path_utils.h  tst_coverage_80.cpp  tst_coverage_80.h  tst_coverage_expansion.cpp  tst_coverage_expansion.h  tst_dialogs.cpp  tst_dialogs.h  tst_klayout_requests.cpp  tst_klayout_requests.h  tst_libfileparser.cpp  tst_libfileparser.h  tst_libman_gui.h  tst_libman_gui_gds.cpp  tst_libman_layoutview_create.cpp  tst_libman_layoutview_create.h  tst_libman_viewops.cpp  tst_libman_viewops.h  tst_lstream_writer.cpp  tst_lstream_writer.h  tst_mainwindow_categories.cpp  tst_mainwindow_categories.h  tst_mainwindow_loaders.cpp  tst_mainwindow_loaders.h  tst_oas_writer.cpp  tst_oas_writer.h  tst_toolmanager.cpp  tst_toolmanager.h
tests/data/: ota1336.projects  sg13g2.projects
tests/data/OTA1336/layout/klayout/: OTA1336.gds
tests/data/OTA1336/netlist/layout/: OTA1336.spice.cdl
tests/data/OTA1336/netlist/pex/: OTA1336.pex.spice  OTA1336.sym  OTA1336.symbol.core
tests/data/OTA1336/netlist/schematic/: OTA1336-basic.spice  OTA1336-final.spice  OTA1336.spice
tests/data/OTA1336/schematic/ac_mim_cap/: ac_mim_cap.schematic.core
tests/data/OTA1336/schematic/dc_diode_op/: dc_diode_op.schematic.core
tests/data/OTA1336/schematic/dc_hbt_13g2/: dc_hbt_13g2.schematic.core
tests/data/OTA1336/schematic/dc_lv_pmos/: dc_lv_pmos.schematic.core
tests/data/OTA1336/schematic/dc_nmoscl_2_op/: dc_nmoscl_2_op.schematic.core
tests/data/OTA1336/schematic/resistors/: resistors.schematic.core
tests/data/OTA1336/schematic/symbols/: symbols.schematic.core
tests/data/OTA1336/schematic/xschem/: OTA1336-basic.sch  OTA1336-final.sch  OTA1336-final.schematic.core  OTA1336.sch  OTA1336.schematic.core  OTA1336.sym  OTA1336.symbol.core  diff_pair.sch  diff_pair.schematic.core  diff_pair.sym  diff_pair.symbol.core  xschemrc
tests/data/OTA1336/schematic/xschem/payload/: OTA1336-basic.sch  OTA1336.sym
tests/data/OTA1336/testbenches/ac/xschem/: OTA1336_avo_tb.sch  OTA1336_avo_tb.schematic.core  OTA1336_cmrr_tb.sch  OTA1336_cmrr_tb.schematic.core  OTA1336_pex_tb.sch  OTA1336_pex_tb.schematic.core  OTA1336_psrr_tb.sch  OTA1336_psrr_tb.schematic.core  OTA1336_tb.sch  OTA1336_tb.schematic.core  xschemrc
tests/data/OTA1336/testbenches/ac/xschem/payload/: OTA1336_avo_tb.sch  OTA1336_pex_tb.sch
tests/data/OTA1336/testbenches/cace/: opa-1336.yaml
tests/data/OTA1336/testbenches/cace/templates/: avo.sch  avo.schematic.core  cmrr.sch  cmrr.schematic.core  dccurrent_dyn.sch  dccurrent_dyn.schematic.core  dccurrent_vdd.sch  dccurrent_vdd.schematic.core  eqvnoise.sch  eqvnoise.schematic.core  gbw.sch  gbw.schematic.core  input_offset.sch  input_offset.schematic.core  overshoot.sch  overshoot.schematic.core  psrr.sch  psrr.schematic.core  slewrate.sch  slewrate.schematic.core  xschemrc
tests/data/OTA1336/testbenches/cace/templates/payload/: avo.sch  dccurrent_dyn.sch  psrr.sch
tests/data/OTA1336/testbenches/dc/xschem/: OTA1336_offset.sch  OTA1336_offset.schematic.core
tests/data/OTA1336/testbenches/mm/xschem/: OTA1336_offset-mm.sch  OTA1336_offset-mm.schematic.core
tests/data/OTA1336/testbenches/noise/xschem/: OTA1336_noise_tb.sch  OTA1336_noise_tb.schematic.core
tests/data/OTA1336/testbenches/tran/xschem/: OTA1336_overshoot_tb.sch  OTA1336_overshoot_tb.schematic.core  OTA1336_slew_rate_tb.sch  OTA1336_slew_rate_tb.schematic.core  OTA1336_tb.sch  OTA1336_tb.schematic.core
tests/data/OTA1336/testbenches/tran/xschem/payload/: OTA1336_tb.sch
tests/data/Qucs_examples/ac_mim_cap/payload/: ac_mim_cap.sch
tests/data/Qucs_examples/dc_diode_op/payload/: dc_diode_op.sch
tests/data/Qucs_examples/dc_esd_op/: dc_esd_op.schematic.core
tests/data/Qucs_examples/dc_hv_nmos/: dc_hv_nmos.schematic.core
tests/data/Qucs_examples/dc_hv_pmos/: dc_hv_pmos.schematic.core
tests/data/Qucs_examples/dc_isolbox/: dc_isolbox.schematic.core
tests/data/Qucs_examples/dc_lv_nmos/: dc_lv_nmos.schematic.core
tests/data/Qucs_examples/dc_schottkydiode/: dc_schottkydiode.schematic.core
tests/data/sg13g2_stdcell/Test/: Test.gds  Test.lstr  Test.oas
tests/data/sg13g2_stdcell/ac_mim_cap/: ac_mim_cap.schematic.core
tests/data/sg13g2_stdcell/dc_diode_op/: dc_diode_op.schematic.core
tests/data/sg13g2_stdcell/dc_esd_op/: dc_esd_op.schematic.core
tests/data/sg13g2_stdcell/dc_hbt_13g2/: dc_hbt_13g2.schematic.core
tests/data/sg13g2_stdcell/dc_hv_nmos/: dc_hv_nmos.schematic.core
tests/data/sg13g2_stdcell/dc_hv_pmos/: dc_hv_pmos.schematic.core
tests/data/sg13g2_stdcell/dc_isolbox/: dc_isolbox.schematic.core
tests/data/sg13g2_stdcell/dc_lv_nmos/: dc_lv_nmos.schematic.core
tests/data/sg13g2_stdcell/dc_lv_pmos/: dc_lv_pmos.schematic.core
tests/data/sg13g2_stdcell/dc_nmoscl_2_op/: dc_nmoscl_2_op.schematic.core
tests/data/sg13g2_stdcell/dc_schottkydiode/: dc_schottkydiode.schematic.core
tests/data/sg13g2_stdcell/libs.doc/meas/HBT/npn13g2_T00/: dummy_open_D53.mdm  dummy_short_D63.mdm  fg_vcb0_RF.mdm  fg_vce_RF.mdm  fo_ib_RF.mdm  fo_vb_RF.mdm  ro_vc0_RF.mdm  spar_vb.mdm  spar_vc.mdm  spar_vcb025.mdm  spar_vcb05.mdm  (+1 more)
tests/data/sg13g2_stdcell/lstr/: sg13g2_stdcell.lstr
tests/data/sg13g2_stdcell/nmos_cell/: nmos_cell.gds
tests/data/sg13g2_stdcell/nmos_top/: nmos_top.gds
tests/data/sg13g2_stdcell/resistors/: resistors.schematic.core
tests/data/sg13g2_stdcell/sg13g2_stdcell/: sg13g2_stdcell.layout.core  sg13g2_stdcell.layout.txt  sg13g2_stdcell.oas  sg13g2_stdcell.schematic.core
tests/data/sg13g2_stdcell/sg13g2_stdcell/payload/: sg13g2_stdcell.sch
tests/data/sg13g2_stdcell/symbols/: symbols.schematic.core
(+512 files in other folders)
